--- a/Modulo 2/Unidad 1_ _CSS (Parte 1)_/Etiquetas.css
+++ b/Modulo 2/Unidad 1_ _CSS (Parte 1)_/Etiquetas.css
@@ -22,12 +22,7 @@ h1 {
   height: auto;
   text-align: center;
   background: rgb(0, 0, 0);
-  background: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 1) 91%,
-    rgba(69, 69, 42, 1) 92%,
-    rgba(0, 0, 0, 1) 96%
-  );
+  
   padding: 5px;
   border-radius: 51px 13px 51px 13px;
   -webkit-border-radius: 51px 13px 51px 13px;
@@ -38,12 +33,32 @@ h1 {
   -webkit-box-shadow: 0px 0px 400px -62px rgba(255, 230, 2, 0.75);
   -moz-box-shadow: 0px 0px 400px -62px rgba(255, 230, 2, 0.75);
 }
+.caja1:hover{
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 91%,
+    rgba(69, 69, 42, 1) 92%,
+    rgba(0, 0, 0, 1) 96%
+  );
 
-.caja2 {
-  border-radius: 200px 200px 200px 200px;
+}
+
+.caja2 
+{
+  border-radius:5%;
+  /* border-radius: 200px 200px 200px 200px;
   -webkit-border-radius: 200px 200px 200px 200px;
-  -moz-border-radius: 200px 200px 200px 200px;
-  border: 3px solid #ffe900;
+  -moz-border-radius: 200px 200px 200px 200px; */
+  border: 2px solid #ffe900;
+  opacity:0.5;
+  
+}
+.caja2:hover{
+  border-radius:10%;
+  border: 4px solid #ffe900;
+  box-shadow: rgb(253, 253, 144);
+  opacity:1;
+
 }
 
 h3 {
