--- a/Modulo 4/Unidad_4/views/index.hbs
+++ b/Modulo 4/Unidad_4/views/index.hbs
@@ -6,6 +6,6 @@
 {{#unless conocido}}
 <p>No te conozco</P>
 <form action="/ingresar" method="post">
-<input type="text" name="nombre"><button>ingresar</button>
+<input type="text" name="nombre"> 
 </form>
 {{/unless}} 
