Ejercicio de Modulo 6 Unidad 1

--- a/sitio_transportes/views/novedades.hbs
+++ b/sitio_transportes/views/novedades.hbs
@@ -1,20 +1,9 @@
  <h2>Novedades</h2>
-      <div class="novedades">
-        <h3>Titulo</h3>
-        <h4>Subtitulo</h4>
-        <p>Descipcion- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam blanditiis, tempore reiciendis inventore officiis nam beatae minus, et ex illum, nostrum doloribus eaque quidem alias! Possimus perferendis quibusdam tempora corrupti!</p>
-        <hr>
-        <h3>Titulo</h3>
-        <h4>Subtitulo</h4>
-        <p>Descipcion- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam blanditiis, tempore reiciendis inventore officiis nam beatae minus, et ex illum, nostrum doloribus eaque quidem alias! Possimus perferendis quibusdam tempora corrupti!</p>
-        <hr>
-        <h3>Titulo</h3>
-        <h4>Subtitulo</h4>
-        <p>Descipcion- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam blanditiis, tempore reiciendis inventore officiis nam beatae minus, et ex illum, nostrum doloribus eaque quidem alias! Possimus perferendis quibusdam tempora corrupti!</p>
-        <hr>
-        <h3>Titulo</h3>
-        <h4>Subtitulo</h4>
-        <p>Descipcion- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam blanditiis, tempore reiciendis inventore officiis nam beatae minus, et ex illum, nostrum doloribus eaque quidem alias! Possimus perferendis quibusdam tempora corrupti!</p>
-        <hr>
-      </div>
-
+{{#each novedades}}
+<div class='novedades'>
+  <h3>{{titulo}}</h3>
+  <h4>{{subtitulo}}</h4>
+  <p>{{cuerpo}}</p> 
+  <hr>
+</div>
+{{/each}}
