--- a/sitio_transportes/views/admin/novedades.hbs
+++ b/sitio_transportes/views/admin/novedades.hbs
@@ -1,6 +1,40 @@
+
 <div class="container" style="margin-top: 50px;">
     <div class="row">
-        <p class="text-end"> Hola, {{usuario}}! <a class="btn btn-danger" href="/admin/login/logout"> Cerrar Sesión 
-            <i class="fas fa-sign-out-alt"></i></a> </p>
+        <p class="text-end"> Hola, {{usuario}}! <a class="btn btn-danger" href="/admin/login/logout"> Cerrar Sesión <i class="fas fa-sign-out-alt"></i></a></p>
+    </div>
+    <div class="row">
+        <div class="col-7" style="margin-top:-90px;">
+            <h2>Listado de Novedades</h2>
+        </div>
+        <div class="col-5 text-end">
+            <a href="" class="btn btn-success"> <i class="fas fa-plus"></i> Nuevo</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <table class="table">
+                <thead class="table-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Título</th>
+                        <th scope="col" class="text-end"> Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                      {{#each novedades}}
+                        <tr>
+                            <th scope="row">{{id}}</th>
+                            <td>{{titulo}}</td>
+                            <td class="text-end">
+                                <a href="" class="btn btn-sm btn-secondary"><i class="fa
+                                fa-pencil"></i></a>
+                                <a href="/admin/novedades/eliminar/{{id}}" class="btn btn-sm btn-secondary"><i class="fa fa-trash"></i></a>
+                            </td>
+                        </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
