--- a/sitio_transportes/views/admin/novedades.hbs
+++ b/sitio_transportes/views/admin/novedades.hbs
@@ -8,9 +8,10 @@
             <h2>Listado de Novedades</h2>
         </div>
         <div class="col-5 text-end">
-            <a href="" class="btn btn-success"> <i class="fas fa-plus"></i> Nuevo</a>
+            <a href="/admin/novedades/agregar" class="btn btn-success"> <i class="fas fa-plus"></i> Nuevo</a>
         </div>
     </div>
+    <br>
     <div class="row">
         <div class="col">
             <table class="table">
@@ -27,7 +28,7 @@
                             <th scope="row">{{id}}</th>
                             <td>{{titulo}}</td>
                             <td class="text-end">
-                                <a href="" class="btn btn-sm btn-secondary"><i class="fa
+                                <a href="/admin/novedades/modificar/{{id}}" class="btn btn-sm btn-secondary"><i class="fa
                                 fa-pencil"></i></a>
                                 <a href="/admin/novedades/eliminar/{{id}}" class="btn btn-sm btn-secondary"><i class="fa fa-trash"></i></a>
                             </td>
