--- a/sitio_transportes/views/admin/novedades.hbs
+++ b/sitio_transportes/views/admin/novedades.hbs
@@ -1,17 +1,21 @@
-
 <div class="container" style="margin-top: 50px;">
     <div class="row">
         <p class="text-end"> Hola, {{usuario}}! <a class="btn btn-danger" href="/admin/login/logout"> Cerrar Sesión <i class="fas fa-sign-out-alt"></i></a></p>
     </div>
     <div class="row">
-        <div class="col-7" style="margin-top:-90px;">
+        <div class="col-7" style="margin-top:-9px;">
             <h2>Listado de Novedades</h2>
         </div>
-        <div class="col-5 text-end">
-            <a href="/admin/novedades/agregar" class="btn btn-success"> <i class="fas fa-plus"></i> Nuevo</a>
+        <div class="col-2 text-end">
+            <a href="/admin/novedades/agregar" class="btn btn-success"><i class="fas fa-plus"></i> Nuevo</a>
+        </div>
+        <div class="col-3 text-rigth">
+            <form class="d-flex" action="/admin/novedades" method="get">
+                <input class="form-control me-2" type="search" placeholder="buscar" aria-label="Search" name="q" {{#if q}}value="{{q}}" {{/if}}>
+                <button class="btn btn-secondary" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+            </form>
         </div>
     </div>
-    <br>
     <div class="row">
         <div class="col">
             <table class="table">
@@ -36,6 +40,11 @@
                     {{/each}}
                 </tbody>
             </table>
+            {{#if is_search}}
+                {{#unless novedades.length}}
+                <p>No se encontraron resultados para "<b>{{q}}</b>"</p>
+                {{/unless}}
+            {{/if}}
         </div>
     </div>
 </div>
