--- a/sitio_transportes/views/contacto.hbs
+++ b/sitio_transportes/views/contacto.hbs
@@ -19,7 +19,7 @@
         <textarea name="mensaje"> </textarea>
       </p>
       <p>
-        <input type="submit" name="Enviar" />
+        <input type="submit"/>
       </p>
     </form>
     <p>{{message}}</p>
